# eurec4a-synoptic

./: .gitignore  README.md  pyproject.toml
eurec4a_synoptic/plot/: __init__.py  hadley_campaign.py  hadley_cross_sections.py  hadley_snapshots.py  hadleycell_eurec4a.py  snapshots.py  timeseries.py
eurec4a_synoptic/scripts/: get_bco_data.py  get_soundings.py  goes_regridded.py  process_grimm.py
