[project]
name = "eurec4a-synoptic"
version = "0.1.0"
authors = [
  { name="Leo Saffin", email="l.saffin@reading.ac.uk" },
]
dependencies = [
    "eurec4a[data]",
    "numpy",
    # Unable to load C3ONTEXT data in with newer versions of xarray
    "xarray<2024.9.0",
    "pandas",
    "matplotlib",
    "cartopy",
    "cmcrameri",
    "scitools-iris",
    "goes2go",
    "h5py",
]
